--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
       'javapoet': '1.10.0',
       'kotlinpoet': '1.3.0',
       'jsr305': '3.0.2',
-      'kotlin': '1.3.30',
+      'kotlin': '1.3.40-eap-105',
       'okio': '2.3.0-SNAPSHOT',
       'okhttp': '3.14.0',
       'moshi': '1.6.0',
@@ -105,6 +105,7 @@ buildscript {
   repositories {
     mavenCentral()
     gradlePluginPortal()
+    maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
   }
 }
 
@@ -115,6 +116,7 @@ allprojects {
   repositories {
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
   }
 }
 
@@ -129,7 +131,7 @@ subprojects { project ->
     configurations.archives.artifacts.removeAll { it.file =~ 'tar' || it.file =~ 'zip' }
   }
 
-  if (project.name != 'wire-runtime') {
+  if (project.name != 'wire-runtime' && project.name != 'wire-tests') {
     apply plugin: 'com.vanniktech.maven.publish'
   }
   apply plugin: 'checkstyle'
